# CareerPulse

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  changelog.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt  status_report.md
core_engine/: .env  README.md  __init__.py  config.py  embedding_service.py  llm_service.py  main.py  requirements.txt
core_engine/data_layer/: README.md  database.py  schemas.py  service.py
core_engine/datasets/: README.md  schemas.py  service.py
core_engine/resume_security/: README.md  router.py  service.py
core_engine/smart_match/: README.md  __init__.py  router.py  schemas.py  service.py
data_pipeline/: README.md
project_assets/: 07 ua2503aih08 Abhinav Anand.docx  07 ua2503aih123 Mayank Anand.md  07 ua2503aih285 Abhinav Anand.docx  07 ua2503aih358 Harsh Anand.docx  07 ua2503aih436 Ankit Anand.docx  CHANGELOG.md  Capstone_Report_CareerPulse.docx  Capstone_Report_CareerPulse.md  README.md  feature_report_data_ingestion.md  feature_report_smart_match.md  llm_selection.md  troubleshooting_log.md
project_assets/sample_resumes/: resume_elite_ai_engineer.md  resume_moderate_web_dev.md
qdrant_data/: raft_state.json
qdrant_data/collections/job_descriptions/0/: newest_clocks.json  replica_state.json
qdrant_data/collections/job_descriptions/0/segments/2a4639b2-3ec6-4cf3-9a80-5d17dd1ae937/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_data/collections/job_descriptions/0/segments/2fdc72f7-3a3e-4c25-a2b7-81a3fd38087d/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_data/collections/job_descriptions/0/segments/38b4ccc2-c6f1-46ea-886f-f0a40b244de6/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_data/collections/job_descriptions/0/segments/4a9f9a66-c1e9-403d-baf8-81abae939de6/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_data/collections/job_descriptions/0/segments/8850bc68-b177-457e-9f70-79e39e5a7ffe/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_data/collections/job_descriptions/0/segments/c6965370-43ef-4ab6-84c5-6e40ea1b5018/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_data/collections/job_descriptions/0/segments/c80e6b92-3c24-48be-8eba-ba4bb10cc432/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_data/collections/job_descriptions/0/segments/f3c05afb-cf18-4554-ba2e-a57f58cc4f16/: mutable_id_tracker.mappings  (+1 more)
quality_assurance/: README.md  cuda_check.py  test_api.py  test_main.py  test_resume_security.py  test_smart_match.py
scripts/: README.md  generate_docx.py  generate_sample_pdfs.py  generate_visuals.py  ingest_qdrant.py  md_to_docx.py  setup_data.py
tests/: test_smart_match.py
web_interface/: README.md  index.html  package-lock.json  package.json
web_interface/public/: analyzer.html  dashboard.html  details.html  index.html  login.html  search.html  upload.html
web_interface/public/css/: style.css
web_interface/public/js/: analyzer.js  api.js  dashboard.js  upload.js
web_interface/src/: analyzer.html  dashboard.html  details.html  index.html  login.html  search.html  upload.html
web_interface/src/app/: layout.tsx  page.tsx
web_interface/src/app/dashboard/: page.tsx
web_interface/src/app/upload/: FileUploadZone.tsx  JobMatchList.tsx  page.tsx
web_interface/src/components/organisms/: Navbar.tsx
web_interface/src/css/: output.css
web_interface/src/js/: api.js  main.js  upload.js
web_interface/src/store/: useResumeStore.ts  useUIStore.ts
