[project]
name = "careerpulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "axios>=0.4.0",
    "echarts>=0.0.0",
    "fastapi>=0.134.0",
    "ffmpeg>=1.4",
    "gunicorn>=25.1.0",
    "httpx>=0.28.1",
    "hypothesis>=6.151.9",
    "ipython>=9.10.0",
    "jupyter>=1.1.1",
    "kaggle>=2.0.0",
    "locust>=2.43.3",
    "matplotlib>=3.10.8",
    "nltk>=3.9.3",
    "normalization>=0.4",
    "numpy>=2.4.2",
    "oauth>=1.0.1",
    "oauth2>=1.9.0.post1",
    "pandas>=3.0.1",
    "passlib>=1.7.4",
    "pdfplumber>=0.11.9",
    "prefect>=3.6.20",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "qdrant-client>=1.17.0",
    "regex>=2026.2.28",
    "scrapy>=2.14.1",
    "sentence-transformers>=5.2.3",
    "slowapi>=0.1.9",
    "spacy>=3.8.11",
    "sympy>=1.14.0",
    "unicode>=2.9",
    "uvicorn>=0.41.0",
    "zod>=0.8.0",
]

[project.scripts]
download-data = "scripts.setup_data:download_data"
