[project]
name = "careerpulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "axios>=0.4.0",
    "echarts>=0.0.0",
    "fastapi>=0.135.1",
    "ffmpeg>=1.4",
    "gunicorn>=25.1.0",
    "httpx>=0.28.1",
    "hypothesis>=6.151.9",
    "ipython>=9.11.0",
    "jupyter>=1.1.1",
    "kaggle>=2.0.0",
    "keras>=3.13.2",
    "locust>=2.43.3",
    "matplotlib>=3.10.8",
    "nltk>=3.9.3",
    "normalization>=0.4",
    "numpy>=2.4.3",
    "oauth2>=1.9.0.post1",
    "pandas>=3.0.1",
    "passlib>=1.7.4",
    "pdfplumber>=0.11.9",
    "prefect>=3.6.22",
    "pydantic>=2.12.5",
    "pypandoc>=1.17",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "qdrant-client>=1.17.1",
    "regex>=2026.2.28",
    "reportlab>=4.4.10",
    "scrapy>=2.14.2",
    "sentence-transformers>=5.3.0",
    "torch==2.10.0+cu130",
    "torchvision==0.25.0+cu130",
    "slowapi>=0.1.9",
    "spacy>=3.8.11",
    "sympy>=1.14.0",
    "unicode>=2.9",
    "zod>=0.8.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu130"

[project.scripts]
download-data = "scripts.setup_data:download_data"
